--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,14 @@
+{%- if page.layout == 'home' -%}
+  {%- capture page_description -%}
+  {{ page.name }}: {{ page.description | strip }} {{ site.meta.description }}
+  {%- endcapture -%}
+{%- endif -%}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="content-language" content="en" />
-        <meta name="description" content="{{ page.description | default: site.meta.description }}" />
+        <meta name="description" content="{{ page_description | default: site.meta.description }}" />
         <meta name="keywords" content="{{ site.meta.keywords | join: ', ' }}" />
         <meta name="copyright" content="{{ site.title }} 2008–{{ site.time | date: '%Y' }}. All rights reserved." />
         <title>{{ page.title }}{% if page.title %} - {% endif %}{{ site.title }}</title>
