--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 
         <div id="footer">
             <p id="copyright">Copyright &copy; {{ site.title }} 2008&ndash;{{ site.time | date: '%Y' }}. All rights reserved.
-            <a id="admin-link" href="/admin/">Admin panel</a>
+            {% if site.admin_url %}<a id="admin-link" href="{{ site.admin_url }}">Admin panel</a>{% endif %}
             <a id="afs-link" href="/accommodation-for-students/">Accommodation for Students</a>
             </p>
             <p id="siteby">Site by <a href="https://starsquare.co.uk">StarSquare Designs</a>.</p>
