Update links for AFS page

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -508,7 +508,7 @@ td {
 
 #afs {
     width: 430px;
-    background-color: #ce965a;
+    background-color: #212138;
     border: 1px solid black;
     text-align: center;
     margin: 0 auto;
