--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+lightbox: true
 ---
 
 <div id="left">
@@ -40,7 +41,7 @@ layout: default
   {%- assign images = site.static_files | where_exp: 'f', 'f.path contains images_path' | where_exp: 'f', 'f.name contains "_thumb"' -%}
 
   {%- for image in images %}
-    <a href="{{ image.path | replace: '_thumb', '' }}"><img src="{{ image.path }}" alt="Image of {{ page.name }}" /></a>
+    <a data-fslightbox href="{{ image.path | replace: '_thumb', '' }}"><img src="{{ image.path }}" alt="Image of {{ page.name }}" /></a>
   {%- endfor %}
 
   {%- for type in site.epc %}
@@ -49,7 +50,7 @@ layout: default
       {%- capture image_path -%}
       /images/epc/{{ key }}/{{ page.epc.current[key] }}_{{ page.epc.potential[key] }}
       {%- endcapture -%}
-      <a href="{{ image_path }}.png"><img src="{{ image_path }}_thumb.png" alt="{{ type[1] }} of {{ page.name }}: Current {{ page.epc.current[key] }} / Potential {{ page.epc.potential[key] }}" /></a>
+      <a data-fslightbox href="{{ image_path }}.png"><img src="{{ image_path }}_thumb.png" alt="{{ type[1] }} of {{ page.name }}: Current {{ page.epc.current[key] }} / Potential {{ page.epc.potential[key] }}" /></a>
     {%- endif -%}
   {%- endfor %}
 </div>
