Remove student renting logic and add IG link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         <div id="footer">
             <p id="copyright">Copyright &copy; {{ site.title }} 2008&ndash;{{ site.time | date: '%Y' }}. All rights reserved.
             {% if site.admin_url %}<a id="admin-link" href="{{ site.admin_url }}">Admin panel</a>{% endif %}
-            <a id="afs-link" href="/accommodation-for-students/">Accommodation for Students</a>
+            <span id="insta">IG: <a href="https://www.instagram.com/yorkhouseshare/">@yorkhouseshare</a></span>
             </p>
             <p id="siteby">Site by <a href="https://starsquare.co.uk">StarSquare Designs</a>.</p>
         </div>
