--- a/css/default.css
+++ b/css/default.css
@@ -497,7 +497,7 @@ dd {
     padding-left: 23px;
 }
 
-#afs-link, #admin-link {
+#insta, #admin-link {
     float: right;
     margin-right: 23px;
 }
